compiler/tests/fa/errors/slice_non_array_fa.salam
// انتظار: خطا۰۲۱
// زبان: فارسی
تابع اصلی:
    متغیر x i32 = 5
    متغیر y خودکار = x[1:2]
    چاپ y
پایان
